# simplex-algorithm

./: CMakeLists.txt  Constraint.java  ObjectiveFunction.java  Rational.java  SimLog.java  Simplex.java  SimplexSimulation.java  Tester.java
